--- a/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
@@ -51,6 +51,11 @@ We also found associations between individual SVs and various predictors.
 Subjective effort, utility, and *corrugator* muscle activity significantly predicted individual SVs.
 Contrary to our hypothesis H6, utility was the best predictor for individual SVs, explaining `r papaja::printnum(H5_M2_table[4,5]*100, digits = 1)` % of variance in SVs.
 However, individual SVs did not show associations with self-reported ER flexibility, we therefore found no evidence for hypothesis H7.
+In a subsequent exploratory analyses, we found associations between individual SVs and self-control.
+This is consistant with the literature, which has already reported correlations between self-control and demand avoidance[@Kool2013].
+However, we did not find an association between NFC and SVs. 
+This is in contrast to the literature, which has reported correlations between NFC, effort discounting and demand avoidance[@ZernaScheffel2022;@Westbrook2013].
+However, these were all cognitive tasks. The role of NFC in affective tasks is not yet known.
 
 ## Ecological validity of subjective values of ER strategies
 
@@ -63,9 +68,13 @@ Rarely have their combined effects been investigated[@Young2020].
 Furthermore, the usual paradigms used in ER choice research (e.g., Sheppes et al.[-@Sheppes2011]) can only estimate how a factor tends to drive the choice in one direction or the other.
 They cannot determine the internal subjective value individuals attribute to the choice options.
 We are confident that we have achieved this with the present paradigm.
-On the one hand, we were able to show which factors have an influence on the values, and on the other hand, we were able to show the actual practical relevance of the values. <!-- Argumentation Corrugator nicht zw. Lvl unterschiedlich, aber trotzdem einfluss, weil man da eine relativ direkte Rückmeldung hat + Levator eher nicht -> alle Bilder negativ aber nur einige eklig, wenn man also nur diese Bilder reinnimmt, wird vielleicht Levator signifikant; 
+On the one hand, we were able to show which factors have an influence on the values, and on the other hand, we were able to show the actual practical relevance of the values. 
+
+<!-- Argumentation Corrugator nicht zw. Lvl unterschiedlich, aber trotzdem einfluss, weil man da eine relativ direkte Rückmeldung hat + Levator eher nicht -> alle Bilder negativ aber nur einige eklig, wenn man also nur diese Bilder reinnimmt, wird vielleicht Levator signifikant; 
 Effort Ergebnisse bestätigen ESER Paper, dass man nach Effort-Minimierung strebt;
 Utility: Subjektive Einschätzung der Strategie als Mittel zur Zielerreichung, was eine überschneidung mit dem SV darstellt und außerdem evtl. eine Interaktion von Effektivität und Effort -->
+
+
 The highest SVs of the individuals were associated with the choice made by the participants in the last experimental block. 
 So far, it has been difficult to transfer such findings from the laboratory to everyday life[@Wilms2020].
 This may be because in laboratory studies the choice options are often predetermined by the experimental design[@Sheppes2011;@Sheppes2014;@Scheffel2021].
