--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -945,6 +945,19 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4158366/pdf/nst116.pdf},
    year = {2014}
 }
 
+@article{Schultz2015,
+   author = {Schultz, W.},
+   title = {Neuronal Reward and Decision Signals: From Theories to Data},
+   journal = {Physiological Reviews},
+   volume = {95},
+   number = {3},
+   pages = {853-951},
+   ISSN = {0031-9333},
+   DOI = {10.1152/physrev.00023.2014},
+   url = {<Go to ISI>://WOS:000360925500006},
+   year = {2015}
+}
+
 @Misc{Schwarzer1999,
    author = {Schwarzer, R. and Diehl, M. and Schmitz, G. S.},
    title = {Self-Regulation Scale},
